--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Giphy</title>
+    <!-- giphy favicon -->
+    <link rel="icon" type="image/png" href="https://giphy.com/static/img/favicon.png">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
@@ -15,7 +17,69 @@
 </head>
 
 <body>
-    
+    <!-- Navbar goes here -->
+
+    <!-- Page Layout here -->
+    <div class="row main">
+        <div class="col m12 l2 #81d4fa light-blue lighten-3 sidebar">
+            <div class="row">
+                <form class="col s12">
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">add_circle</i>
+                            <input id="icon_prefix" type="text" class="validate">
+                            <label for="icon_prefix">New Topic</label>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="row">
+                <div class="col s12 center-align">
+                    <button class="btn waves-effect blue-grey lighten-3 black-text">test</button>
+                </div>
+                <div class="col s12 center-align">
+                    <button class="btn waves-effect blue-grey lighten-3 black-text">test</button>
+                </div>
+                <div class="col s12 center-align">
+                    <button class="btn waves-effect blue-grey lighten-3 black-text">test</button>
+                </div>
+                <div class="col s12 center-align">
+                    <button class="btn waves-effect blue-grey lighten-3 black-text">test</button>
+                </div>
+                <div class="col s12 center-align">
+                    <button class="btn waves-effect blue-grey lighten-3 black-text">test</button>
+                </div>
+                <div class="col s12 center-align">
+                    <button class="btn waves-effect blue-grey lighten-3 black-text">test</button>
+                </div>
+                <div class="col s12 center-align">
+                    <button class="btn waves-effect blue-grey lighten-3 black-text">test</button>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="col m12 l10">
+            <div class="row">
+                <div>Showing Results for $Search_Term</div>
+            </div>
+            <div class="row">
+                <div>
+                    <img src="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- footer -->
+    <footer class="page-footer light-blue darken-2">
+        <div class="footer-copyright">
+            <div class="container">
+            © 2018 Copyright Text
+            <a class="grey-text text-lighten-4 right" href="https://www.tylerbisbee.com!">Check out my Portfolio</a>
+            </div>
+        </div>
+    </footer>
 
     <!--JS Libs  -->
     <script type="text/javascript" src="Assets/javascript/materialize.js"></script>
