working page layout with mock data

--- a/index.html
+++ b/index.html
@@ -21,19 +21,44 @@
 
     <!-- Page Layout here -->
     <div class="row main">
-        <div class="col m12 l2 #81d4fa light-blue lighten-3 sidebar">
-            <div class="row">
+        <div class="col m12 l2 #81d4fa grey darken-2 sidebar">
+            <div class="row grey darken-1">
                 <form class="col s12">
                     <div class="row">
                         <div class="input-field col s12">
                             <i class="material-icons prefix">add_circle</i>
                             <input id="icon_prefix" type="text" class="validate">
-                            <label for="icon_prefix">New Topic</label>
+                            <label class="white-text" for="icon_prefix">New Topic</label>
                         </div>
                     </div>
                 </form>
             </div>
-            <div class="row">
+            <!-- This is where the buttons go! -->
+            <div id="buttonGrid" class="row">
+                <div class="col s12 center-align">
+                    <button class="btn waves-effect blue-grey lighten-3 black-text buttonStretch">test</button>
+                </div>
+                <div class="col s12 center-align">
+                    <button class="btn waves-effect blue-grey lighten-3 black-text buttonStretch">test</button>
+                </div>
+                <div class="col s12 center-align">
+                    <button class="btn waves-effect blue-grey lighten-3 black-text">test</button>
+                </div>
+                <div class="col s12 center-align">
+                    <button class="btn waves-effect blue-grey lighten-3 black-text">test</button>
+                </div>
+                <div class="col s12 center-align">
+                    <button class="btn waves-effect blue-grey lighten-3 black-text">test</button>
+                </div>
+                <div class="col s12 center-align">
+                    <button class="btn waves-effect blue-grey lighten-3 black-text">test</button>
+                </div>
+                <div class="col s12 center-align">
+                    <button class="btn waves-effect blue-grey lighten-3 black-text">test</button>
+                </div>
+                <div class="col s12 center-align">
+                    <button class="btn waves-effect blue-grey lighten-3 black-text">test</button>
+                </div>
                 <div class="col s12 center-align">
                     <button class="btn waves-effect blue-grey lighten-3 black-text">test</button>
                 </div>
@@ -55,31 +80,335 @@
                 <div class="col s12 center-align">
                     <button class="btn waves-effect blue-grey lighten-3 black-text">test</button>
                 </div>
-
+                <div class="col s12 center-align">
+                    <button class="btn waves-effect blue-grey lighten-3 black-text">test</button>
+                </div>
+                <div class="col s12 center-align">
+                    <button class="btn waves-effect blue-grey lighten-3 black-text">test</button>
+                </div>
             </div>
         </div>
 
-        <div class="col m12 l10">
+        <div class="col m12 l10 sidebar  grey darken-1">
+            <!-- this is the breadcrumb -->
             <div class="row">
-                <div>Showing Results for $Search_Term</div>
+                <div class="flow-text mar10 white-text">Showing Results for $Search_Term</div>
+                <div class="divider"></div>
             </div>
-            <div class="row">
-                <div>
-                    <img src="">
+            <!-- Main Image Grid -->
+            <div id="imageGrid" class="section">
+                
+                <div class="col s12 m6 l3">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                            <span class="card-title">Card Title</span>
+                            <span class="cardRating">Rating: R</span>
+                        </div>
+                    </div>
                 </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media0.giphy.com/media/feqkVgjJpYtjy/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                                <span class="card-title">Card Title</span>
+                                <span class="cardRating">Rating: R</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
         </div>
     </div>
 
     <!-- footer -->
-    <footer class="page-footer light-blue darken-2">
+    <footer class="page-footer grey darken-2">
         <div class="footer-copyright">
             <div class="container">
-            © 2018 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="https://www.tylerbisbee.com!">Check out my Portfolio</a>
+                © 2018 Copyright Text
+                <a class="grey-text text-lighten-4 right" href="https://www.tylerbisbee.com!">Check out my Portfolio</a>
             </div>
         </div>
     </footer>
+
+
 
     <!--JS Libs  -->
     <script type="text/javascript" src="Assets/javascript/materialize.js"></script>
