--- a/card.html
+++ b/card.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Giphy</title>
+        <!-- giphy favicon -->
+        <link rel="icon" type="image/png" href="https://giphy.com/static/img/favicon.png">
+        <!--Import Google Icon Font-->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!--Import materialize.css-->
+        <link type="text/css" rel="stylesheet" href="Assets/css/materialize.css" media="screen,projection" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" media="screen" href="Assets/css/style.css" />
+    
 </head>
 <body>
-    <div>
-        
+<div>
+    <div class="row">
+        <div class="col s12 m6">
+            <div class="card">
+                <div class="card-image">
+                    <img src="http://media2.giphy.com/media/FiGiRei2ICzzG/200.gif">
+                    <span class="card-title">Card Title</span>
+                    <span class="cardRating">Rating: R</span>
+                </div>
+            </div>
+        </div>
     </div>
+</div>
 </body>
 </html></html>
