--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div class="row">
                         <div class="input-field col s12">
                             <i class="material-icons prefix">add_circle</i>
-                            <input id="icon_prefix" type="text" class="validate">
+                            <input id="icon_prefix" type="text" class="validate white-text">
                             <label class="white-text" for="icon_prefix">New Topic</label>
                         </div>
                     </div>
@@ -402,8 +402,8 @@
     <footer class="page-footer grey darken-2">
         <div class="footer-copyright">
             <div class="container">
-                © 2018 Copyright Text
-                <a class="grey-text text-lighten-4 right" href="https://www.tylerbisbee.com!">Check out my Portfolio</a>
+                © 2018 
+                <a class="grey-text text-lighten-4 right" target="_blank" href="https://www.tylerbisbee.com">Check out my Portfolio</a>
             </div>
         </div>
     </footer>
