starting to draw buttons

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <form class="col s12">
                     <div class="row">
                         <div class="input-field col s12">
-                            <i class="material-icons prefix">add_circle</i>
+                            <i class="material-icons prefix" id="addIcon">add</i>
                             <input id="icon_prefix" type="text" class="validate white-text">
                             <label class="white-text" for="icon_prefix">New Topic</label>
                         </div>
@@ -413,7 +413,7 @@
     <!--JS Libs  -->
     <script type="text/javascript" src="Assets/javascript/materialize.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="Assets/javascript/game.js"></script>
+    <script src="Assets/javascript/app.js"></script>
 </body>
 
 </html>
