working animation & no blank input

--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
         <div class="col m12 l2 grey darken-2 sidebar">
             
             <div class="row grey darken-2">
-                <form class="col s12">
+                <form class="col s11" id="form">
                     <div class="row">
                         <div class="input-field col s12">
-                            <!-- <i class="material-icons prefix" id="addIcon">add</i> -->
                             <input id="newTopic" type="text" class="validate white-text">
-                            <label class="white-text" for="newTopic">New Topic</label>
-                            <button class="waves-effect grey lighten-3 black-text btn" id="submit">
+                            <label id ="topicLabel" class="white-text" for="newTopic">New Topic</label>
+                            <button class="waves-effect grey lighten-3 black-text btn" id="submit" type="submit">
                                 <i class="material-icons right">add</i>
                                 Add
                             </button>
