--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
         <div id="rightViewport" class="col m12 l10 sidebar  grey darken-2 hide">
             <!-- this is the breadcrumb -->
             <div class="row">
-                <div class="flow-text mar10 white-text right">Showing Results for: "
-                    <span id="searchTerm"></span>"
+                <div class="flow-text mar10 white-text right">Showing Results for: "<span id="searchTerm"></span>"
                 </div>
             </div>
             <!-- Main Image Grid -->
