--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
         <div class="container">
             <a class="grey-text text-lighten-4 right" target="_blank" href="https://www.tylerbisbee.com">Check out my Portfolio</a>
 
-            <!-- <div>Parental Contols
+            <div>Parental Contols
                 <div id="pc" class="switch">
                     <label>
                         Off
-                        <input type="checkbox">
+                        <input id="pcSwitch" type="checkbox">
                         <span class="lever"></span>
                         On
                     </label>
                 </div>
-            </div> -->
+            </div>
 
         </div>
     </div>
