set parent control to on by default

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
             <a class="grey-text text-lighten-4 right" target="_blank" href="https://www.tylerbisbee.com">Check out my Portfolio</a>
 
             <div>Parental Contols
-                <div id="pc" class="switch">
+                <div id="pc" class="switch" >
                     <label>
                         Off
-                        <input id="pcSwitch" type="checkbox">
+                        <input id="pcSwitch" type="checkbox" checked>
                         <span class="lever"></span>
                         On
                     </label>
