--- a/index.html
+++ b/index.html
@@ -64,37 +64,38 @@
         <div id="rightViewport" class="col m12 l10 sidebar  grey darken-2 hide">
             <!-- this is the breadcrumb -->
             <div class="row">
-                <div class="flow-text mar10 white-text right">Showing Results for: "<span id="searchTerm"></span>"
+                <div class="flow-text mar10 white-text right">Showing Results for: "
+                    <span id="searchTerm"></span>"
                 </div>
             </div>
             <!-- Main Image Grid -->
             <div id="imageGrid" class="section">
-                
+
             </div>
         </div>
     </div>
 
     <!-- footer -->
-<footer class="page-footer grey darken-3">
+    <footer class="page-footer grey darken-3">
 
-    <div class="footer">
-        <div class="container">
-            <a class="grey-text text-lighten-4 right" target="_blank" href="https://www.tylerbisbee.com">Check out my Portfolio</a>
+        <div class="footer">
+            <div class="container">
+                <a class="grey-text text-lighten-4 right" target="_blank" href="https://www.tylerbisbee.com">Check out my Portfolio</a>
 
-            <div>Parental Contols
-                <div id="pc" class="switch" >
-                    <label>
-                        Off
-                        <input id="pcSwitch" type="checkbox" checked>
-                        <span class="lever"></span>
-                        On
-                    </label>
+                <div>Parental Contols
+                    <div id="pc" class="switch">
+                        <label>
+                            Off
+                            <input id="pcSwitch" type="checkbox" checked>
+                            <span class="lever"></span>
+                            On
+                        </label>
+                    </div>
                 </div>
-            </div>
 
+            </div>
         </div>
-    </div>
-</footer>
+    </footer>
 
 
 
